objects/GSS_Approval_Flow__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GSS_Index_Name__c</fullName>
        <label>GSS Index Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSS_Index__c</fullName>
        <label>GSS Index</label>
        <referenceTo>GSS_Index__c</referenceTo>
        <relationshipLabel>GSS Approval Flows</relationshipLabel>
        <relationshipName>GSS_Approval_Flows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GSS_Split_Requested_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSS Split Requested User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSS_Approval_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSS_Unique_Key__c</fullName>
        <formula>GSS_Index__r.Name + TEXT(HQ__c) + TEXT(Rep_Type__c) + TEXT(Platform__c) + Proposed_AX_Login__c + TEXT(Proposed_Territory_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSS Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ__c</fullName>
        <label>HQ</label>
        <picklist>
            <picklistValues>
                <fullName>AS-CHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID-JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN-IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP-MAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-CMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PercentageCheck__c</fullName>
        <formula>IF( AND (Previous_GSS_Percentage__c = Proposed_GSS_Percentage__c , TEXT(Type__c) = &apos;EXISTING&apos; ) , &apos;Yes&apos; , &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PercentageCheck</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_AX_Login__c</fullName>
        <label>Previous AX Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_AX_Name__c</fullName>
        <label>Previous AX Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_GSS_Percentage__c</fullName>
        <label>Previous GSS Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Territory_Code__c</fullName>
        <label>Previous Territory Code</label>
        <picklist>
            <picklistValues>
                <fullName>AS-CHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID-JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID-NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN-IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP-MAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-CMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_AX_Login__c</fullName>
        <label>Proposed AX Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_AX_Name__c</fullName>
        <label>Proposed AX Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_GSS_Percentage__c</fullName>
        <label>Proposed GSS Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposed_Territory_Code__c</fullName>
        <label>Proposed Territory Code</label>
        <picklist>
            <picklistValues>
                <fullName>AS-CHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS-TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID-JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID-NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN-IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP-MAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-CMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-SW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <label>Rep Type</label>
        <picklist>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAX</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_GSS_Split_Reason__c</fullName>
        <label>Request GSS Split Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_GSS_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request GSS Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>EXISTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIncrementalUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIncrementalUpload</label>
        <type>Checkbox</type>
    </fields>
    <label>GSS Approval Flow</label>
    <nameField>
        <displayFormat>GAF-{00000000}</displayFormat>
        <label>GSS Approval Flow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSS Approval Flows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>